# LibreTranslate-py

./: .gitignore  README.md  generate.py  pyproject.toml  setup.py  spec.json  test_libretranslate.py
libretranslatepy/: __init__.py  api.py  compat.py
libretranslatepy/api/misc/: get_frontend_settings.py  get_health.py  post_suggest.py
libretranslatepy/api/translate/: get_languages.py  post_detect.py  post_translate.py  post_translate_file.py
libretranslatepy/models/: __init__.py  detections_item.py  error_response.py  error_slow_down.py  frontend_settings.py  frontend_settings_language.py  frontend_settings_language_source.py  frontend_settings_language_target.py  health_response.py  languages_item.py  post_detect_body.py  post_suggest_body.py  post_translate_body.py  post_translate_body_format.py  post_translate_file_body.py  suggest_response.py  translate.py  translate_detected_language.py  translate_file.py
